# cpp_rendering_engine

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: demo.cpp.EDBAF5EF80A39E2E.idx  ecs.cpp.529DACB9123F146D.idx  ecs.cpp.BCB12C4F5F97BC96.idx  ecs.hpp.2E43E990CDAC6559.idx  ecs.hpp.2FC0B8AACA58B04A.idx  engine.cpp.11AA0AB6484F48C4.idx  engine.cpp.E316BA665BC6D5D5.idx  engine.hpp.4555915EEDB6A65D.idx
demo/: CMakeLists.txt  main.cpp
demo/src/: demo.cpp
ecs/: CMakeLists.txt
ecs/include/: ecs.hpp
ecs/src/: ecs.cpp
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/src/: engine.cpp
